// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapDispatchToProps returns the right keys 1`] = `
Object {
  "addAttachment": [Function],
  "clearLinkPreview": [Function],
  "createPost": [Function],
  "createProject": [Function],
  "fetchDefaultTopics": [Function],
  "goToUrl": [Function],
  "pollingFetchLinkPreviewRaw": [Function],
  "removeLinkPreview": [Function],
  "setAnnouncement": [Function],
  "updatePost": [Function],
}
`;

exports[`mapStateToProps returns the right keys for a new post 1`] = `
Object {
  "announcementSelected": undefined,
  "canModerate": true,
  "groupOptions": Array [
    SessionBoundModel {
      "_fields": Object {
        "id": "99",
        "slug": "foo",
      },
    },
    SessionBoundModel {
      "_fields": Object {
        "id": "100",
        "slug": "bar",
      },
    },
  ],
  "groupSlug": "foo",
  "currentGroup": SessionBoundModel {
    "_fields": Object {
      "id": "99",
      "slug": "foo",
    },
  },
  "currentUser": SessionBoundModel {
    "_fields": Object {
      "id": "1",
    },
    "id": "1",
  },
  "defaultTopics": Array [],
  "editing": false,
  "editingPostId": undefined,
  "fetchLinkPreviewPending": false,
  "fileAttachments": Array [],
  "imageAttachments": Array [],
  "isEvent": false,
  "isProject": false,
  "linkPreview": null,
  "linkPreviewStatus": false,
  "loading": false,
  "myModeratedGroups": Array [
    SessionBoundModel {
      "_fields": Object {
        "id": "99",
        "slug": "foo",
      },
    },
  ],
  "networkSlug": undefined,
  "post": null,
  "postPending": false,
  "postTypeContext": undefined,
  "showFiles": false,
  "showImages": false,
  "topic": null,
  "topicName": undefined,
  "uploadFileAttachmentPending": false,
  "uploadImageAttachmentPending": false,
}
`;

exports[`mapStateToProps returns the right keys for a new post while pending 1`] = `
Object {
  "announcementSelected": undefined,
  "canModerate": true,
  "groupOptions": Array [
    SessionBoundModel {
      "_fields": Object {
        "id": "99",
        "slug": "foo",
      },
    },
    SessionBoundModel {
      "_fields": Object {
        "id": "100",
        "slug": "bar",
      },
    },
  ],
  "groupSlug": "foo",
  "currentGroup": SessionBoundModel {
    "_fields": Object {
      "id": "99",
      "slug": "foo",
    },
  },
  "currentUser": SessionBoundModel {
    "_fields": Object {
      "id": "1",
    },
    "id": "1",
  },
  "defaultTopics": Array [],
  "editing": true,
  "editingPostId": undefined,
  "fetchLinkPreviewPending": false,
  "fileAttachments": Array [],
  "imageAttachments": Array [],
  "isEvent": false,
  "isProject": false,
  "linkPreview": null,
  "linkPreviewStatus": false,
  "loading": true,
  "myModeratedGroups": Array [
    SessionBoundModel {
      "_fields": Object {
        "id": "99",
        "slug": "foo",
      },
    },
  ],
  "networkSlug": undefined,
  "post": null,
  "postPending": true,
  "postTypeContext": undefined,
  "showFiles": false,
  "showImages": false,
  "topic": null,
  "topicName": undefined,
  "uploadFileAttachmentPending": false,
  "uploadImageAttachmentPending": false,
}
`;

exports[`mergeProps goToPost redirects to group feed with no topicName 1`] = `
Array [
  Array [
    "/c/theslug/p/123",
  ],
]
`;

exports[`mergeProps goToPost redirects to topic with topicName 1`] = `
Array [
  Array [
    "/c/theslug/thetopicname/p/123",
  ],
]
`;
